# pte-blood-donation-system

./: CMakeLists.txt  README.md  blood-donation.c  datevalidator.h  db.txt  donation  donor.h  filereader.c  initializer.c  initializer.h  main  main.c  menu.c  menu.h  newdonor.c  newdonor.h
src/: createdonor.c  createdonor.h  initializer.c  initializer.h  listdonors.c  listdonors.h  menu.c  menu.h  search.c  search.h  showdonors.c  showdonors.h
src/lib/: datevalidator.c  datevalidator.h  filehelper.c  filehelper.h  filereader.c  filereader.h  strhelper.c  strhelper.h  validator.c  validator.h
src/structs/: donor.h
